--- a/src/components/ContentTop.scss
+++ b/src/components/ContentTop.scss
@@ -11,10 +11,12 @@
   align-items: center;
 
   button {
+
     height: 1.9rem;
     cursor: pointer;
+    font-style: normal;
     font-family: SB Sans Text;
-    font-weight: 500;
+    font-weight: 600;
     font-size: 16px;
     line-height: 20px;
     background: #d8dce3;
