--- a/src/components/PhotoSliderv3.scss
+++ b/src/components/PhotoSliderv3.scss
@@ -44,6 +44,7 @@
   position: absolute;
   top: 24px;
   right: 24px;
+  transition: 2s;
 }
 
 .photo-slider_slider.MuiSlider-root {
@@ -190,11 +191,22 @@
     gap: 10px;
     width: fit-content;
     margin: 0% auto;
+    .photos-modal_menu {
+      border-radius: 7px;
+    }
     img {
-      filter: saturate(0%);
+      opacity: 0.7;
       height: 50px;
       &.active {
-        filter: saturate(70%);
+        border: solid 2px transparent;
+        background-image: linear-gradient(
+            rgba(255, 255, 255, 0),
+            rgba(255, 255, 255, 0)
+          ),
+          linear-gradient(270deg, #24e029 0%, #00b9ac 100%);
+        background-origin: border-box;
+        background-clip: content-box, border-box;
+        opacity: 1;
       }
     }
   }
