--- a/src/components/ImageShow.scss
+++ b/src/components/ImageShow.scss
@@ -18,6 +18,7 @@
     left: -15%;
     top: -1%;
     .year {
+      font-family: SB Sans Display;
       position: absolute;
       width: 100px;
       top: 24px;
