--- a/src/components/ImageShow.scss
+++ b/src/components/ImageShow.scss
@@ -26,7 +26,7 @@
       font-size: 44px;
       background: -webkit-linear-gradient(left, #333f48 0%, #15c16a 100%);
       -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+      // -webkit-text-fill-color: transparent;
     }
   }
 }
