--- a/src/components/ImageShow.scss
+++ b/src/components/ImageShow.scss
@@ -24,8 +24,8 @@
       top: 24px;
       left: 0px;
       font-size: 44px;
-      background: -webkit-linear-gradient(left, #333f48 0%, #15c16a 100%);
-      -webkit-background-clip: text;
+      // background: -webkit-linear-gradient(left, #333f48 0%, #15c16a 100%);
+      // -webkit-background-clip: text;
       // -webkit-text-fill-color: transparent;
     }
   }
