--- a/src/components/PhotoSliderv3.scss
+++ b/src/components/PhotoSliderv3.scss
@@ -260,7 +260,10 @@
     right: 0px;
   }
   .slider-containerv3 {
-    width: 300px;
+    width: 100%;
+  }
+  .photo-slider_slide {
+    margin-right: 10px;
   }
   .photo-slider_slider.MuiSlider-root {
     width: 70%;
