--- a/src/components/ImageShow.scss
+++ b/src/components/ImageShow.scss
@@ -6,33 +6,193 @@
   flex-direction: row;
   align-items: flex-end;
   .block-text-photo {
-    margin-left: 35%;
+    left: 40%;
     display: flex;
+    height: 888px;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: space-between;
+    position: relative;
   }
   .test {
     width: 701px;
     height: 623px;
     position: absolute;
-    left: -15%;
-    top: -1%;
+    left: -9%;
+    top: 26%;
   }
-  .year {
-    font-family: SB Sans Display;
+
+  .group-years {
     position: absolute;
-    width: 100px;
-    top: 106%;
-    left: 35%;
-    font-size: 44px;
-    background: -webkit-linear-gradient(left, #333f48 0%, #15c16a 100%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    width: 100%;
+    height: 28%;
+    top: 27%;
+    left: 6%;
+    .qwerty {
+      position: absolute;
+      width: 96px;
+      height: 40px;
+      top: 66%;
+      left: 24%;
+    }
+    .year {
+      font-family: SB Sans Display;
+      font-style: normal;
+      visibility: hidden;
+      transition: 0.3s;
+      line-height: 50px;
+      opacity: 0.1;
+      top: 10%;
+      width: 96px;
+      height: 45px;
+      left: -6%;
+      position: absolute;
+      top: 115%;
+      user-select: none;
+    }
+
+    .pos0 {
+      cursor: pointer;
+      font-weight: 300;
+      font-size: 22px;
+      position: absolute;
+      opacity: 0.6;
+      top: 147%;
+      left: 24%;
+      transition: 0.7s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+      visibility: visible;
+    }
+    .pos1 {
+      color: #333f48;
+      font-weight: 300;
+      font-size: 22px;
+
+      opacity: 0.3;
+      position: absolute;
+      top: 201%;
+      left: 15%;
+      transition: 1s;
+      visibility: visible;
+    }
+    .pos2 {
+      font-weight: 300;
+      font-size: 16px;
+      opacity: 0.3;
+      position: absolute;
+      top: 214%;
+      left: 6%;
+      visibility: visible;
+      transition: all 1s;
+    }
+    .pos3 {
+      visibility: hidden;
+      transition: 0.3s;
+      opacity: 0.1;
+      top: 10%;
+      width: 96px;
+      height: 40px;
+      left: -6%;
+      position: absolute;
+      top: 115%;
+    }
+    .pos4 {
+      visibility: hidden;
+      transition: 0.3s;
+      opacity: 0.1;
+      top: 10%;
+      width: 96px;
+      height: 40px;
+      left: -6%;
+      position: absolute;
+      top: 115%;
+    }
+    .pos5 {
+      visibility: hidden;
+      transition: 0.3s;
+      opacity: 0.1;
+      top: 10%;
+      width: 96px;
+      height: 40px;
+      left: -6%;
+      position: absolute;
+      top: 115%;
+    }
+    .pos6 {
+      visibility: hidden;
+      transition: 0.3s;
+      opacity: 0.1;
+      top: 10%;
+      width: 96px;
+      height: 40px;
+      left: -6%;
+      position: absolute;
+      top: 115%;
+    }
+    .pos7 {
+      visibility: hidden;
+      transition: 0.3s;
+      opacity: 0.1;
+      top: 10%;
+      width: 96px;
+      height: 40px;
+      left: -6%;
+      position: absolute;
+      top: 115%;
+    }
+    .pos8 {
+      font-weight: 300;
+      font-size: 16px;
+      opacity: 0.3;
+      position: absolute;
+      top: 0%;
+      left: 6%;
+      transition: 1s;
+      visibility: visible;
+      transform: translateY(30px);
+    }
+    .pos9 {
+      font-weight: 300;
+      font-size: 22px;
+      opacity: 0.3;
+      position: absolute;
+      top: 26%;
+      left: 15%;
+      transition: all 1s;
+      visibility: visible;
+    }
+    .pos10 {
+      cursor: pointer;
+      font-weight: 300;
+      font-size: 22px;
+      position: absolute;
+      opacity: 0.6;
+      top: 61%;
+      left: 24%;
+      transition: 0.7s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+      visibility: visible;
+    }
+
+    .pos11 {
+      font-family: SB Sans Display;
+      position: absolute;
+      width: 110px;
+      top: 109%;
+      left: 35%;
+      font-weight: lighter;
+      font-size: 44px;
+      background: -webkit-linear-gradient(left, #333f48 0%, #15c16a 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      transition: 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53);
+      opacity: 1;
+      visibility: visible;
+    }
   }
 }
 
 .imageshow-text {
-  width: 80%;
+  width: 60%;
+  transition: 1s;
   h2 {
     margin: 0;
     font-family: SB Sans Display;
@@ -61,17 +221,24 @@
 @media screen and (max-width: 1024px) {
   .imageshow {
     .block-text-photo {
-      margin-left: 35%;
       display: flex;
       flex-direction: column;
+      height: 1021px;
+      justify-content: space-between;
       align-items: flex-start;
+    }
+    .group-years {
+      width: 113%;
+      height: 23%;
+      top: 39%;
+      left: -1%;
     }
     .test {
       width: 634px;
       height: 583px;
       position: absolute;
-      left: -31%;
-      top: 42%;
+      left: -23%;
+      top: 39%;
     }
     .year {
       position: absolute;
@@ -99,13 +266,20 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      height: 800px;
     }
     .test {
       width: 634px;
       height: 583px;
       position: absolute;
-      left: -52%;
-      top: 46%;
+      left: -54%;
+      top: 23%;
+    }
+    .group-years {
+      height: 32%;
+      top: 20%;
+      left: -37%;
+      width: 203%;
     }
     .year {
       position: absolute;
@@ -118,7 +292,9 @@
     width: 100%;
   }
   .imageshow-text {
-    width: 86%;
+    max-height: 400px;
+    overflow: auto;
+    width: 60%;
     h2 {
       width: 100%;
       font-size: 36px;
@@ -141,6 +317,77 @@
       justify-content: space-between;
       height: 1000px;
     }
+    .block-text-photo {
+      position: initial;
+    }
+    .group-years {
+      transform: rotate(90deg);
+      top: 69%;
+      left: -49%;
+      width: 298%;
+      height: 20%;
+      .year {
+        transform: rotate(-90deg);
+      }
+      .pos11 {
+        top: 117%;
+      }
+    }
+
+    .test {
+      width: 570px;
+      height: 536px;
+      position: absolute;
+      left: -39%;
+      top: 18%;
+      transform: rotate(90deg);
+    }
+
+  }
+  .imageshow-text {
+    padding: 20px 20px;
+    background: #eaedf2;
+    z-index: 3;
+    width: 117%;
+    max-height: 400px;
+    overflow: auto;
+    position: relative;
+    left: -14%;
+
+    h2 {
+      font-size: 36px;
+      line-height: 44px;
+    }
+    p {
+      font-size: 16px;
+      line-height: 22px;
+    }
+  }
+}
+@media screen and (max-width: 375px) {
+  .imageshow {
+    width: 100%;
+    .block-text-photo {
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      height: 1000px;
+    }
+    .block-text-photo {
+      position: initial;
+    }
+    .group-years {
+      transform: rotate(90deg);
+      top: 69%;
+      left: -49%;
+      width: 298%;
+      height: 20%;
+      .pos11 {
+        top: 117%;
+      }
+    }
+
     .test {
       width: 570px;
       height: 536px;
@@ -158,12 +405,15 @@
     }
   }
   .imageshow-text {
-    width: 100%;
-    position: absolute;
-    left: -20px;
     padding: 20px 20px;
     background: #eaedf2;
     z-index: 3;
+    width: 100%;
+    max-height: 400px;
+    overflow: auto;
+    position: relative;
+    left: -7%;
+
     h2 {
       font-size: 36px;
       line-height: 44px;
