--- a/src/components/PhotoSliderv3.scss
+++ b/src/components/PhotoSliderv3.scss
@@ -1,9 +1,9 @@
 .slider-wrapper {
-  position: absolute;
   height: 200px;
   width: 900px;
   top: 340px;
   right: -100px;
+  margin: 100px 0;
 }
 
 .slider-containerv3 {
@@ -18,6 +18,8 @@
 }
 
 .photosliderv3 {
+  transition: 0.55s opacity, 0.55s visibility;
+
   display: flex;
   gap: 5%;
   height: calc(100%);
@@ -30,7 +32,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 24px;
+  // border-radius: 24px;
+  border-radius: 15.1233px;
+
   overflow: hidden;
   img {
     height: 100%;
@@ -51,6 +55,7 @@
   width: 40%;
   .MuiSlider-thumb {
     width: 60px;
+    height: 6px;
     color: #24d32c;
     border-radius: 24px;
     top: 60%;
@@ -65,7 +70,7 @@
     width: 110%;
     background: #d3d7e0;
     border-radius: 24px;
-    height: 12px;
+    height: 6px;
   }
   .MuiSlider-thumb.Mui-focusVisible,
   .MuiSlider-thumb:hover {
@@ -188,11 +193,12 @@
   .photos-modal_all-photos {
     max-height: 300px;
     display: flex;
-    gap: 10px;
+    // gap: 10px;
     width: fit-content;
     margin: 0% auto;
     .photos-modal_menu {
       border-radius: 7px;
+      margin-right: 10px;
     }
     img {
       opacity: 0.7;
@@ -255,6 +261,7 @@
     width: 300px;
     top: 720px;
     right: 0px;
+    margin: 0px;
   }
   .slider-containerv3 {
     width: 300px;
